# oguri

./: .build.yml  LICENSE  README.md  animation.c  animation.h  buffers.c  buffers.h  cairo-pixbuf.c  cairo-pixbuf.h  config.c  config.h  meson.build  oguri-swaybg  oguri.c  oguri.h  oguri_ipc.h  ogurictl.c  output.c  output.h
contrib/: oguri-swaybg
protocols/: meson.build
